# TspOptimizer

./: CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h  Tour.cpp  Tour.h  TspInstance.cpp  TspInstance.h  TspWidget.cpp  TspWidget.h
src/optim/: AcoOptimizer.cpp  AcoOptimizer.h  ArqOptimizer.cpp  ArqOptimizer.h  GeneticOptimizer.cpp  GeneticOptimizer.h  IOptimizer.h  IlsOptimizer.cpp  IlsOptimizer.h  OptimizerWorker.cpp  OptimizerWorker.h  SimAnnealOptimizer.cpp  SimAnnealOptimizer.h  TwoOptOptimizer.cpp  TwoOptOptimizer.h
